@@ -3,7 +3,4 @@
  *
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  */
-@Manifest.Section
 package ball.maven.wagon.providers.gs;
-
-import ball.annotation.Manifest;
