@@ -1,5 +1,7 @@
 2017-07-09  Allen D. Ball  <ball@sol.local>
 
+	* Removed dependency on ball:ball-util.
+
 	* src/main/java/ball/maven/wagon/providers/gs/GSUtilWagon.java:
 	Initial writing.
 
